# construct-os

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.debian  Dockerfile.debian.ci  Justfile  LICENSE-MIT  NOTICE  README.ko.md  README.md  SECURITY.md  WORKFLOWS.md  build.rs  cliff.toml  clippy.toml  docker-compose.yml  install.sh  setup.bat  setup.ps1
crates/aardvark-sys/: Cargo.toml  README.md
crates/aardvark-sys/src/: lib.rs
operator-mcp/: Makefile  PLAN-harness-improvements.md  PLAN-sdk-migration.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
operator-mcp/operator_mcp/: __init__.py  __main__.py  _log.py  agent_state.py  agent_subprocess.py  artifact_diff.py  circuit_breaker.py  clean_env.py  compaction.py  construct_config.py  cost_tracker.py  event_consumer.py  failure_classification.py  gateway_client.py  heartbeat.py  journal.py  journal_health.py  kumiho_clients.py  mcp_injection.py  operator_mcp.py  policy.py  reconnect.py  retry_queue.py  review_loop.py  run_log.py  run_operator_mcp.py  session_manager_client.py  skill_loader.py  spawn_tracker.py  subagent_mcp.py  team_validation.py  tracking.py  workflow_context.py  workflow_presets.py
operator-mcp/operator_mcp/a2a/: __init__.py  a2a_card.py  a2a_client.py  a2a_registry.py  task_handler.py  task_store.py
operator-mcp/operator_mcp/patterns/: __init__.py  group_chat.py  handoff.py  map_reduce.py  refinement.py  supervisor.py
operator-mcp/operator_mcp/tool_handlers/: __init__.py  agents.py  architect_propose.py  canvas.py  chat.py  clawhub.py  compact.py  dashboard.py  memory.py  memory_graph.py  nodes.py  outcomes.py  permissions.py  planning.py  pool.py  session.py  skill_outcomes.py  skills.py  teams.py  trust.py  workflow_discovery.py  workflow_revisions.py  workflows.py
operator-mcp/operator_mcp/workflow/: __init__.py  (+8 more)
operator-mcp/session-manager/: package.json
operator-mcp/skills/: operator-chat.md  operator-committee.md  operator-handoff.md  operator-loop.md  operator-orchestrator.md
operator-mcp/tests/: conftest.py  test_agent_state.py  test_agent_subprocess.py  test_architect_propose.py  test_artifact_diff.py  test_circuit_breaker.py  test_clean_env.py  test_cold_outreach_workflow.py  test_cost_tracker.py  test_email_step.py  test_event_consumer.py  test_gateway_client.py  test_heartbeat.py  test_journal.py  test_journal_health.py  test_kumiho_team_get_team.py  test_mcp_injection.py  test_policy.py  test_python_step.py  test_reconnect.py  test_reliability.py  test_review_loop.py  test_run_log.py  test_skill_loader.py  test_spawn_tracker.py  test_stress_spawn.py  test_team_decomposition.py  test_team_kref_resolution.py  test_tracking.py  test_workflow_context.py  test_workflow_discovery.py  test_workflow_presets.py  test_workflow_revisions.py
(+773 files in other folders)
