[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "construct-operator"
version = "0.3.1"
description = "Construct Operator MCP Server — agent orchestration control plane"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "kumiho>=0.9.20",
    "kumiho-memory>=0.5.2",
]

[project.optional-dependencies]
sdk = ["claude-agent-sdk>=0.1.50"]
all = ["construct-operator[sdk]"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
construct-operator = "operator_mcp.operator_mcp:main"
construct-subagent-mcp = "operator_mcp.subagent_mcp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["operator_mcp"]
